--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.20.12",
     "gatsby-plugin-manifest": "^2.3.3",
     "gatsby-plugin-offline": "^3.1.2",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-sass": "^2.2.1",
+    "gatsby-plugin-styled-components": "^3.3.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "react-images": "^1.0.0"
+    "react-images": "^1.0.0",
+    "styled-components": "^5.1.1"
   },
   "keywords": [
     "gatsby"
